2005-04-26  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn-hacked.el:
	(svn-log-edit-files-to-commit): restore previously existing function

	* perso/autoloads.el: more autoloads

	* dotemacs.el:
	(minimal): request planner-config here

	* config/muse-config.el:
	(request): only set options if possible

	* config/highlight-changes-config.el:
	(highlight-changes-config): fixed typo

	* config/fracc-config.el:
	(install-french-accent-mode-if-needed): require fracc inside the function

2005-04-25  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/autoloads.el:
	(irc): autoload erc-config

	* dotemacs.el:
	(type-break): activate it to fight RSI :/

	* dotemacs-cust.el:
	(custom-set-variables): erc settings

	* config/erc-config.el:
	(erc-autojoin-channels): use a custom version to support password protected channels
	(irc): move away personal settings to .emacs-local

2005-04-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn.el: updated to latest version from xsteve

	* dotemacs.el:
	(kbd): use "C-c +" as binding for increment-number-at-point

	* config/planner-config.el:
	(planner-bookmark): use it

2005-04-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(increment-number-at-point): new function, based on a version from Alex Schröder

	* config/planner-config.el:
	(planner-bibtex): use it
	(planner-xtla): use it

	* dotemacs-cust.el:
	(custom-set-variables): dot should generate .ps files by default, read quoted char in hex

2005-04-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(yh/collapse-home-directory): new util function

	* dotemacs.el:
	(xtla): use xtla for arch repositories

	* dotemacs-cust.el:
	(custom-set-variables): use w3m as default browser
	(custom-set-variables): close planner files automatically, some xtla settings

	* config/planner-config.el:
	(planner-annotation-format-local-file-name): use the new yh/collapse-home-directory
	(planner-w3m): use w3m for web url handling
